# fastapi_example

./: README.md  database.py  main.py  pyproject.toml
