[tool.poetry]
name = "train-fastapi-linkedin"
version = "0.1.0"
description = ""
authors = ["Sergei Smolov <sergei_smolov@epam.com>"]
readme = "README.md"
packages = [{include = "train_fastapi_linkedin"}]

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.95.2"
mysql-connector-python = "^8.0.33"
sqlalchemy = "^2.0.15"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.4"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
